--- a/user-interface/src/admin/banks/Banks.scss
+++ b/user-interface/src/admin/banks/Banks.scss
@@ -1,4 +1,8 @@
 .banks-admin-panel {
+  .grid-row:first-of-type {
+    margin-top: 1.5rem;
+  }
+
   .banks-table-container {
     max-width: 38rem;
     margin-top: 1.25rem;
